@@ -10,6 +10,7 @@ Adam Lackorzynski <adam@os.inf.tu-dresden.de>
 Adrian Phillips <a.phillips@dnmi.no>
 Alessandro Rubini <rubini@gnu.org>
 Alexander K. Hudek <alexhudek@home.com>
+Alexander Langer <alex@big.endian.de>
 Alfred M. Szmidt <ams@kemisten.nu>
 Andrew Clausen <clausen@gnu.org>
 Ben Liblit <liblit@eecs.berkeley.edu>
